Makes minor formatting changes to stats mini-project 1.

--- a/mini-project_inferential_stats_1/inferential_stats_1.ipynb
+++ b/mini-project_inferential_stats_1/inferential_stats_1.ipynb
@@ -789,7 +789,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The bootstrap test yields a 95% confidence interval from 96.7° to 99.5°F, and the margin of error is 1.4°F. \n",
+    "The bootstrap test yields a 95% confidence interval from 96.7° to 99.5°F, which means we can be 95% confident that the true value lies within this interval. (To be precise, in repeated samples drawn from the same data generating process, a confidence interval calculated this way will contain the true mean in 95% of cases.) The size of our confidence interval implies a margin of error of 1.4°F. \n",
     "\n",
     "The instructions don't explicitly say whether the sample disregarded sick individuals.  However, even if it did not, the 95% confidence interval should largely exclude people with a fever, because at each point in time only a small percentage of people should suffer from it. \n",
     "\n",
@@ -809,8 +809,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    96.81\n",
-      "1    99.69\n",
+      "0    96.8\n",
+      "1    99.7\n",
       "dtype: float64\n"
      ]
     }
@@ -821,8 +821,8 @@
     "mean_temperature = df.temperature.mean()\n",
     "# Standard deviation\n",
     "sd_temperature = df.temperature.std()\n",
-    "# 2.5th and 97.5th percentile of standard normal distribution\n",
-    "ci = pd.Series(scipy.stats.norm.interval(0.95)) \n",
+    "# 2.5th and 97.5th percentile of t-distribution\n",
+    "ci = pd.Series(scipy.stats.t.interval(0.95, df=len(df)))\n",
     "\n",
     "# Confidence interval\n",
     "temperature_ci_classical = (mean_temperature + ci*sd_temperature)\n",
@@ -837,7 +837,7 @@
     {
      "data": {
       "text/plain": [
-       "1.4370125838276664"
+       "1.4505151934534553"
       ]
      },
      "execution_count": 16,
@@ -872,7 +872,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To investigate whether there is a gender difference in normal body temperature, I will conduct a hypothesis test using the bootstrap. The null hypothesis is that there is no difference on average. An appropriate test statistic is the difference between average male and average female body temperature. \n",
+    "To investigate whether there is a gender difference in normal body temperature, I will conduct an independent samples hypothesis test for the mean.  I will carry this out first using the bootstrap, and then using a classical t-test. The null hypothesis is that there is no difference on average. An appropriate test statistic is the difference between average male and average female body temperature. \n",
     "\n",
     "To simulate the distribution of this test statistic under the null hypothesis, we break the link between body temperature and gender by randomly assigning a gender to each temperature measurement. We then determine where in this distribution the actually observed difference lies. If it does not lie between the 2.5th and 97.5th percentiles, it is unlikely that the observed difference in body temperatures is generated from a distribution with no gender difference, and we would therefore reject this null hypothesis. "
    ]
@@ -931,7 +931,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p-value:  0.0274 \n",
+      "p-value:  0.0192 \n",
       "\n",
       "        temperature\n",
       "gender             \n",
@@ -1007,7 +1007,7 @@
    "source": [
     "The test returns a two-sided p-value of 2.7%.  In other words, if the null hypothesis – that there is no gender difference in average body temperature – was true, then there is only a small chance that we would observe a difference in temperature as big as in our sample. Thus, we can reject the null hypothesis of no difference at the conventional significance level of 5%. Instead, we can be pretty sure that women's body temperature is higher than men's. Note, however, that the effect size is small: The observed difference is only about 0.2°F.\n",
     "\n",
-    "To check the result, let's also conduct a classical hypothesis test:"
+    "To check the result, let's also conduct a classical t-test for independent samples:"
    ]
   },
   {
