Fixes inconsistent heading formatting.

--- a/mini-project_inferential_stats_3/inferential_statistics_exercise_3.ipynb
+++ b/mini-project_inferential_stats_3/inferential_statistics_exercise_3.ipynb
@@ -244,7 +244,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###    1. Setup an appropriate hypothesis test.\n",
+    "###  1. Setup an appropriate hypothesis test.\n",
+    "\n",
     "Firstly, let's see how the difference between small and large hospital changes if we take the log:"
    ]
   },
@@ -315,8 +316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###    2. Compute and report the observed significance value (or p-value).\n",
-    "   "
+    "###  2. Compute and report the observed significance value (or p-value)."
    ]
   },
   {
@@ -548,7 +548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3. Report statistical significance for $\\alpha$ = .01. **"
+    "### 3. Report statistical significance for $\\alpha$ = .01. "
    ]
   },
   {
@@ -564,7 +564,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** 4. Discuss statistical significance and practical significance. Do they differ here? How does this change your recommendation to the client? **"
+    "###  4. Discuss statistical significance and practical significance. Do they differ here? How does this change your recommendation to the client? "
    ]
   },
   {
@@ -582,7 +582,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** 5. Look at the scatterplot above**\n",
+    "###  5. Look at the scatterplot above\n",
     "\n",
     "**– What are the advantages and disadvantages of using this plot to convey information?**\n",
     "\n",
