Moves stacking from temporary notebook to separate notebook in appendix.

--- a/capstone_lending_club/2_modeling_temporary.ipynb
+++ b/capstone_lending_club/2_modeling_temporary.ipynb
@@ -7,12 +7,12 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Adjusting-threshold\" data-toc-modified-id=\"Adjusting-threshold-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Adjusting threshold</a></span><ul class=\"toc-item\"><li><span><a href=\"#Random-Forests\" data-toc-modified-id=\"Random-Forests-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Random Forests</a></span></li><li><span><a href=\"#Load-other-models-and-make-predictions\" data-toc-modified-id=\"Load-other-models-and-make-predictions-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Load other models and make predictions</a></span></li><li><span><a href=\"#Stacking\" data-toc-modified-id=\"Stacking-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Stacking</a></span><ul class=\"toc-item\"><li><span><a href=\"#Logistic-regression\" data-toc-modified-id=\"Logistic-regression-1.3.1\"><span class=\"toc-item-num\">1.3.1&nbsp;&nbsp;</span>Logistic regression</a></span></li><li><span><a href=\"#Random-forests\" data-toc-modified-id=\"Random-forests-1.3.2\"><span class=\"toc-item-num\">1.3.2&nbsp;&nbsp;</span>Random forests</a></span></li></ul></li><li><span><a href=\"#Adjust-the-decision-threshold\" data-toc-modified-id=\"Adjust-the-decision-threshold-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Adjust the decision threshold</a></span><ul class=\"toc-item\"><li><span><a href=\"#Linear-regression\" data-toc-modified-id=\"Linear-regression-1.4.1\"><span class=\"toc-item-num\">1.4.1&nbsp;&nbsp;</span>Linear regression</a></span></li><li><span><a href=\"#SVM\" data-toc-modified-id=\"SVM-1.4.2\"><span class=\"toc-item-num\">1.4.2&nbsp;&nbsp;</span>SVM</a></span></li><li><span><a href=\"#Other\" data-toc-modified-id=\"Other-1.4.3\"><span class=\"toc-item-num\">1.4.3&nbsp;&nbsp;</span>Other</a></span></li></ul></li></ul></li><li><span><a href=\"#XGBoost\" data-toc-modified-id=\"XGBoost-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>XGBoost</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Estimate-or-load-models-and-make-predictions\" data-toc-modified-id=\"Estimate-or-load-models-and-make-predictions-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Estimate or load models and make predictions</a></span></li><li><span><a href=\"#Stacking\" data-toc-modified-id=\"Stacking-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Stacking</a></span><ul class=\"toc-item\"><li><span><a href=\"#Logistic-regression\" data-toc-modified-id=\"Logistic-regression-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Logistic regression</a></span><ul class=\"toc-item\"><li><span><a href=\"#Including-features\" data-toc-modified-id=\"Including-features-2.1.1\"><span class=\"toc-item-num\">2.1.1&nbsp;&nbsp;</span>Including features</a></span></li><li><span><a href=\"#Only-individual-predictions,-not-features\" data-toc-modified-id=\"Only-individual-predictions,-not-features-2.1.2\"><span class=\"toc-item-num\">2.1.2&nbsp;&nbsp;</span>Only individual predictions, not features</a></span></li></ul></li><li><span><a href=\"#Random-forests\" data-toc-modified-id=\"Random-forests-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Random forests</a></span></li></ul></li><li><span><a href=\"#Voting-classifier\" data-toc-modified-id=\"Voting-classifier-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Voting classifier</a></span></li><li><span><a href=\"#Adjust-the-decision-threshold\" data-toc-modified-id=\"Adjust-the-decision-threshold-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Adjust the decision threshold</a></span><ul class=\"toc-item\"><li><span><a href=\"#Linear-regression\" data-toc-modified-id=\"Linear-regression-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Linear regression</a></span></li><li><span><a href=\"#SVM\" data-toc-modified-id=\"SVM-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>SVM</a></span></li><li><span><a href=\"#Other\" data-toc-modified-id=\"Other-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>Other</a></span></li></ul></li><li><span><a href=\"#XGBoost\" data-toc-modified-id=\"XGBoost-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>XGBoost</a></span></li></ul></div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,19 +103,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Adjusting threshold"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Random Forests"
+    "#### Estimate or load models and make predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +123,7 @@
        "            verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,15 +136,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Load other models and make predictions"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,343 +194,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Stacking"
+    "#### Voting classifier"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Add predictions as additional feature\n",
-    "# For TRAINING data\n",
-    "X_train_small_stack = np.hstack(\n",
-    "   (X_train_small,\n",
-    "    y_proba_rf_tr[:, np.newaxis],\n",
-    "    y_proba_lr_tr[:, np.newaxis],\n",
-    "    y_dist_svm_lin_tr[:, np.newaxis],\n",
-    "    y_dist_svm_poly_tr[:, np.newaxis],\n",
-    "    y_dist_svm_poly_tr[:, np.newaxis]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# For TEST data\n",
-    "X_test_small_stack = np.hstack(\n",
-    "   (X_test_small,\n",
-    "    y_proba_rf_1[:, np.newaxis],\n",
-    "    y_proba_lr_1[:, np.newaxis],\n",
-    "    y_dist_svm_lin_1[:, np.newaxis],\n",
-    "    y_dist_svm_poly_1[:, np.newaxis],\n",
-    "    y_dist_svm_poly_1[:, np.newaxis]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Logistic regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.350441783918724"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Fit stacked model to training data\n",
-    "stacker_lr = LogisticRegressionCV(Cs=10, class_weight='balanced', cv=10,\n",
-    "                                  scoring='average_precision',\n",
-    "                                   max_iter=10000)\n",
-    "stacker_lr.fit(X_train_small_stack, y_train_small)\n",
-    "\n",
-    "# Make predictions with stacked model for test data\n",
-    "y_stack_lr = stacker_lr.predict_proba(X_test_small_stack)[:, 1]\n",
-    "\n",
-    "average_precision_score(y_test_small, y_stack_lr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[10.28210531,  0.02022592,  0.05572553,  0.0443575 ,  0.0443575 ]])"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# View coefficients from individual learners\n",
-    "stacker_lr.coef_[:,-5:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "83     -0.095091\n",
-       "84     -0.089276\n",
-       "7      -0.079436\n",
-       "16     -0.064119\n",
-       "105    -0.055367\n",
-       "53     -0.049490\n",
-       "15     -0.046306\n",
-       "43     -0.040108\n",
-       "48     -0.039527\n",
-       "9      -0.031394\n",
-       "115    -0.031268\n",
-       "98     -0.028940\n",
-       "95     -0.028152\n",
-       "42     -0.026458\n",
-       "67     -0.025667\n",
-       "18     -0.024552\n",
-       "74     -0.024404\n",
-       "57     -0.023492\n",
-       "49     -0.022145\n",
-       "31     -0.020425\n",
-       "61     -0.019768\n",
-       "116    -0.018894\n",
-       "52     -0.018333\n",
-       "3      -0.018222\n",
-       "81     -0.017477\n",
-       "113    -0.017167\n",
-       "69     -0.016378\n",
-       "47     -0.015466\n",
-       "44     -0.014811\n",
-       "64     -0.013956\n",
-       "         ...    \n",
-       "58      0.015882\n",
-       "111     0.016119\n",
-       "0       0.016336\n",
-       "72      0.016427\n",
-       "20      0.017826\n",
-       "24      0.018468\n",
-       "78      0.019052\n",
-       "89      0.019080\n",
-       "60      0.019684\n",
-       "120     0.020226\n",
-       "59      0.020955\n",
-       "26      0.022169\n",
-       "71      0.022821\n",
-       "28      0.025442\n",
-       "99      0.028855\n",
-       "39      0.031170\n",
-       "91      0.031838\n",
-       "6       0.031891\n",
-       "11      0.035510\n",
-       "122     0.044357\n",
-       "123     0.044357\n",
-       "19      0.044403\n",
-       "100     0.047347\n",
-       "14      0.048003\n",
-       "121     0.055726\n",
-       "90      0.057813\n",
-       "21      0.057827\n",
-       "93      0.089542\n",
-       "17      0.095802\n",
-       "119    10.282105\n",
-       "Length: 124, dtype: float64"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# View most important coefficients\n",
-    "pd.Series(stacker_lr.coef_.flatten()) \\\n",
-    "    .sort_values()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10000, 124)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_test_small_stack.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10000, 119)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_test_small.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Random forests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.3187370524374364"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Fit stacked model to training data\n",
-    "stacker_rf = RandomForestClassifier(n_estimators=100, \n",
-    "        oob_score=False, n_jobs=n_jobs, random_state=1,\n",
-    "        class_weight='balanced_subsample')\n",
-    "stacker_rf.fit(X_train_small_stack, y_train_small)\n",
-    "\n",
-    "# Make predictions with stacked model for test data\n",
-    "y_stack_rf = stacker_rf.predict_proba(X_test_small_stack)[:, 1]\n",
-    "\n",
-    "average_precision_score(y_test_small, y_stack_rf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.3754287919433627\n",
-      "0.3408734704057727\n",
-      "0.37711824602853794\n",
-      "0.38893719706733143\n",
-      "0.3809588272345418\n"
-     ]
-    }
-   ],
-   "source": [
-    "predictions = [y_proba_lr_1, y_proba_rf_1, y_dist_svm_lin_1, \n",
-    "               y_dist_svm_rbf_1, y_dist_svm_poly_1]\n",
-    "for prediction in predictions:\n",
-    "    print(average_precision_score(y_test_small, prediction))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Make prediction with stacked model for test set\n",
-    "# First we need the predictions of the individual models\n",
-    "y_proba_rf_te = rf.predict_proba(X_t)[:, 1]\n",
-    "y_proba_lr_te = lr_gs_1.predict_proba(X_t)[:, 1]\n",
-    "y_dist_svm_lin_te = svm_lin_gs_1.decision_function(X_t)\n",
-    "y_dist_svm_rbf_te = svm_rbf_gs_1.decision_function(X_t)\n",
-    "y_dist_svm_poly_te = svm_poly_gs_1.decision_function(X_t)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Concatenate predictions for test set\n",
-    "X_stack_te = pd.DataFrame({\n",
-    "    'rf': y_proba_rf_t,\n",
-    "    'lr': y_proba_lr_t,\n",
-    "    'svm_lin': y_dist_svm_lin_t,\n",
-    "    'svm_rbf': y_dist_svm_poly_t,\n",
-    "    'svm_poly': y_dist_svm_poly_t})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_st_lr = stacker_lr.predict(X_t)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -555,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### XGBoost"
+    "#### XGBoost"
    ]
   },
   {
@@ -943,7 +594,7 @@
    "toc_cell": true,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
